Revision history for Net::IMAP

{{$NEXT}}

1.0.2  2022-02-21T20:00:15+01:00
    - First version in zef ecosystem