@@ -10,4 +10,6 @@ filename = lib/Net/IMAP.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
